Actualización del repositorio

--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html lang="es">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170954966-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-170954966-1');
+    </script>
     <title>Hotel Bon Jesús</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="description" content="Hotel Bon Jesús">
-    <meta name="keywords" content="hotel, hotel veracruz, hoteles veracruz, bon jesus, hotel bon jesus, hotel en la playa veracruz, veracruz playa">
+    <meta name="keywords" content="bon jesus, hotel, hotel veracruz, hoteles veracruz, hotel bon jesus, hotel en la playa veracruz, veracruz playa">
     <meta name="author" content="Luis Angel Hernández Castillo">
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/favicon.ico" />
@@ -74,10 +83,6 @@
                 <div class="col-lg-6 col-sm-12">
                     <div class="head-content">
                         <h2 class="hero-tag wow fadeInUp animated" data-wow-duration="900ms" data-wow-delay="200ms"></h2>
-                        <h1 class="hero-heading wow fadeInDown animated" data-wow-duration="1000ms" data-wow-delay="200ms">UN PEDACITO DE CIELO...
-                        </h1>
-                        <h2 class="hero-glow-text">EN VERACRUZ</h2>
-                        <p class="hero-text">Ubicado en el corazón de Costa Esmeralda, Veracruz. Bon Jesús es un refugio de paz y belleza inigualable.</p>
                         <ul class="action-links">
                             <!-- # Reservaciones # -->
                             <div class="container">
@@ -186,7 +191,7 @@
                                     <li><i class="text-orange fas fa-bed"></i> Cama Queen Size</li>
                                     <li><i class="text-orange fas fa-snowflake"></i> A/C</li>
                                     <li><i class="text-orange fas fa-tv"></i> Pantalla plana 32´´</li>
-                                    <li><i class="text-orange fas fa-utensils"></i> Desayuno incluido en restaurante Majagua</li>
+                                    <li><i class="text-orange fas fa-wifi"></i> WiFi gratuito en todo el hotel</li>
                                 </ul>
                             </div>
                             <div class="col-md-6 col-xs-6">
@@ -195,14 +200,13 @@
                                     <li><i class="text-orange fas fa-coffee"></i> Cafetera</li>
                                     <li><i class="text-orange fas fa-hot-tub"></i> Baño con tina</li>
                                     <li><i class="text-orange fas fa-ethernet"></i> Servicio de cable</li>
-                                    <li><i class="text-orange fas fa-wifi"></i> WiFi gratuito en todo el hotel</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="row">
-                        	<div class="col-md-12 text-center mt-1">
-                        		<button class="btn-habitaciones">RESERVA YA</button>
-                        	</div>
+                            <div class="col-md-12 text-center mt-1">
+                                <a href="https://wa.me/522297806298?text=¡Hola,%20quiero%20reservar%20la%20habitación%20Sencilla!%20Por%20favor" class="btn btn-habitaciones">RESERVA YA</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -221,7 +225,7 @@
                                     <li><i class="text-orange fas fa-bed"></i> Cama King Size</li>
                                     <li><i class="text-orange fas fa-snowflake"></i> A/C</li>
                                     <li><i class="text-orange fas fa-tv"></i> Pantalla plana 32´´</li>
-                                    <li><i class="text-orange fas fa-utensils"></i> Desayuno incluido en restaurante Majagua</li>
+                                    <li><i class="text-orange fas fa-wifi"></i> WiFi gratuito en todo el hotel</li>
                                 </ul>
                             </div>
                             <div class="col-md-6 col-xs-6">
@@ -230,14 +234,13 @@
                                     <li><i class="text-orange fas fa-coffee"></i> Cafetera</li>
                                     <li><i class="text-orange fas fa-hot-tub"></i> Baño con tina</li>
                                     <li><i class="text-orange fas fa-ethernet"></i> Servicio de cable</li>
-                                    <li><i class="text-orange fas fa-wifi"></i> WiFi gratuito en todo el hotel</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="row">
-                        	<div class="col-md-12 text-center mt-1">
-                        		<button class="btn-habitaciones">RESERVA YA</button>
-                        	</div>
+                            <div class="col-md-12 text-center mt-1">
+                                <a href="https://wa.me/522297806298?text=¡Hola,%20quiero%20reservar%20la%20habitación%20Junior!%20Por%20favor" class="btn btn-habitaciones">RESERVA YA</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -258,7 +261,7 @@
                                     <li><i class="text-orange fas fa-bed"></i> 2 Camas Queen Size</li>
                                     <li><i class="text-orange fas fa-snowflake"></i> A/C</li>
                                     <li><i class="text-orange fas fa-tv"></i> Pantalla plana 32´´</li>
-                                    <li><i class="text-orange fas fa-utensils"></i> Desayuno incluido en restaurante Majagua</li>
+                                    <li><i class="text-orange fas fa-wifi"></i> WiFi gratuito en todo el hotel</li>
                                 </ul>
                             </div>
                             <div class="col-md-6 col-xs-6">
@@ -267,14 +270,13 @@
                                     <li><i class="text-orange fas fa-coffee"></i> Cafetera</li>
                                     <li><i class="text-orange fas fa-hot-tub"></i> Baño con tina</li>
                                     <li><i class="text-orange fas fa-ethernet"></i> Servicio de cable</li>
-                                    <li><i class="text-orange fas fa-wifi"></i> WiFi gratuito en todo el hotel</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="row">
-                        	<div class="col-md-12 text-center mt-1">
-                        		<button class="btn-habitaciones">RESERVA YA</button>
-                        	</div>
+                            <div class="col-md-12 text-center mt-1">
+                                <a href="https://wa.me/522297806298?text=¡Hola,%20quiero%20reservar%20la%20habitación%20Doble!%20Por%20favor" class="btn btn-habitaciones">RESERVA YA</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -293,7 +295,7 @@
                                     <li><i class="text-orange fas fa-bed"></i> Cama King Size</li>
                                     <li><i class="text-orange fas fa-snowflake"></i> A/C</li>
                                     <li><i class="text-orange fas fa-tv"></i> Pantalla plana 32´´</li>
-                                    <li><i class="text-orange fas fa-utensils"></i> Desayuno incluido en restaurante Majagua</li>
+                                    <li><i class="text-orange fas fa-wifi"></i> WiFi gratuito en todo el hotel</li>
                                 </ul>
                             </div>
                             <div class="col-md-6 col-xs-6">
@@ -302,89 +304,14 @@
                                     <li><i class="text-orange fas fa-coffee"></i> Cafetera</li>
                                     <li><i class="text-orange fas fa-hot-tub"></i> Jacuzzi y terraza privada</li>
                                     <li><i class="text-orange fas fa-ethernet"></i> Servicio de cable</li>
-                                    <li><i class="text-orange fas fa-wifi"></i> WiFi gratuito en todo el hotel</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="row">
-                        	<div class="col-md-12 text-center mt-1">
-                        		<button class="btn-habitaciones">RESERVA YA</button>
-                        	</div>
+                            <div class="col-md-12 text-center mt-1">
+                                <a href="https://wa.me/522297806298?text=¡Hola,%20quiero%20reservar%20la%20habitación%20Master%20Suite!%20Por%20favor" class="btn btn-habitaciones">RESERVA YA</a>
+                            </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-3 col-sm-12">
-                    <div class="feature">
-                        <img src="images/4.jpg" alt="" class="img-responsive center-block img-rounded">
-                        <h3>Habitación Sencilla</h3>
-                        <ul class="texto">
-                            <li><i class="text-orange fas fa-male"></i> 2 personas</li>
-                            <li><i class="text-orange fas fa-bed"></i> Cama Queen Size</li>
-                            <li><i class="text-orange fas fa-snowflake"></i> A/C</li>
-                            <li><i class="text-orange fas fa-tv"></i> Pantalla plana 32´´</li>
-                            <li><i class="text-orange fas fa-ethernet"></i> Servicio de cable</li>
-                            <li><i class="text-orange fas fa-wine-glass-alt"></i> Frigobar</li>
-                            <li><i class="text-orange fas fa-coffee"></i> Cafetera</li>
-                            <li><i class="text-orange fas fa-hot-tub"></i> Baño con tina (planta baja unicamente)</li>
-                            <li><i class="text-orange fas fa-wifi"></i> WiFi gratuito en todo el hotel</li>
-                            <li><i class="text-orange fas fa-utensils"></i> Desayuno incluido en restaurante Majagua</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-12">
-                    <div class="feature">
-                        <img src="images/3.jpg" alt="" class="img-responsive center-block img-rounded">
-                        <h3>Habitación Junior</h3>
-                        <ul class="texto">
-                            <li><i class="text-orange fas fa-male"></i> 2 personas</li>
-                            <li><i class="text-orange fas fa-bed"></i> Cama King Size</li>
-                            <li><i class="text-orange fas fa-snowflake"></i> A/C</li>
-                            <li><i class="text-orange fas fa-tv"></i> Pantalla plana 32´´</li>
-                            <li><i class="text-orange fas fa-ethernet"></i> Servicio de cable</li>
-                            <li><i class="text-orange fas fa-wine-glass-alt"></i> Frigobar</li>
-                            <li><i class="text-orange fas fa-coffee"></i> Cafetera</li>
-                            <li><i class="text-orange fas fa-hot-tub"></i> Baño con tina</li>
-                            <li><i class="text-orange fas fa-wifi"></i> WiFi gratuito en todo el hotel</li>
-                            <li><i class="text-orange fas fa-utensils"></i> Desayuno incluido en restaurante Majagua</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-12">
-                    <div class="feature">
-                        <img src="images/habitaciondoble.jpg" alt="" class="img-responsive center-block img-rounded">
-                        <h3>Habitación Doble</h3>
-                        <ul class="texto">
-                            <li><i class="text-orange fas fa-male"></i> 2 - 4 personas</li>
-                            <li><i class="text-orange fas fa-bed"></i> 2 Camas Queen Size</li>
-                            <li><i class="text-orange fas fa-snowflake"></i> A/C</li>
-                            <li><i class="text-orange fas fa-tv"></i> Pantalla plana 32´´</li>
-                            <li><i class="text-orange fas fa-ethernet"></i> Servicio de cable</li>
-                            <li><i class="text-orange fas fa-wine-glass-alt"></i> Frigobar</li>
-                            <li><i class="text-orange fas fa-coffee"></i> Cafetera</li>
-                            <li><i class="text-orange fas fa-hot-tub"></i> Baño con tina</li>
-                            <li><i class="text-orange fas fa-wifi"></i> WiFi gratuito en todo el hotel</li>
-                            <li><i class="text-orange fas fa-utensils"></i> Desayuno incluido en restaurante Majagua</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-12">
-                    <div class="feature">
-                        <img src="images/master.jpg" alt="" class="img-responsive center-block img-rounded">
-                        <h3>Habitación Master Suite</h3>
-                        <ul class="texto">
-                            <li><i class="text-orange fas fa-male"></i> 2 personas</li>
-                            <li><i class="text-orange fas fa-bed"></i> Cama King Size</li>
-                            <li><i class="text-orange fas fa-snowflake"></i> A/C</li>
-                            <li><i class="text-orange fas fa-tv"></i> Pantalla plana 32´´</li>
-                            <li><i class="text-orange fas fa-ethernet"></i> Servicio de cable</li>
-                            <li><i class="text-orange fas fa-wine-glass-alt"></i> Frigobar</li>
-                            <li><i class="text-orange fas fa-coffee"></i> Cafetera</li>
-                            <li><i class="text-orange fas fa-hot-tub"></i> Jacuzzi y terraza privada</li>
-                            <li><i class="text-orange fas fa-wifi"></i> WiFi gratuito en todo el hotel</li>
-                            <li><i class="text-orange fas fa-utensils"></i> Desayuno incluido en restaurante Majagua</li>
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -396,21 +323,38 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-12">
-                    <h2 class="sec-heading">SERVICIOS ADICIONALES</h2>
+                    <h2 class="sec-heading">EXPERIENCIAS</h2>
                     <p class="sec-heading-tag">Convierta sus vacaciones en momentos aún más innolvidables disfrutando alguna de las múltiples actividades que tenemos para usted y su familia.</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-md-6">
                     <img src="images/cabalgata.jpg" alt="" class="img-responsive wow scaleIn animated" data-wow-duration="500ms" data-wow-delay="300ms">
                 </div>
-                <div class="col-sm-6">
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <ul class="texto my-2">
+                                <li><i class="text-orange fas fa-spa"></i> Servicios de belleza (masajes y faciales. Se solicitan con dos horas de anticipación. Precio segun tratamiento).</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul class="texto">
+                                <li class="mb-2"><i class="text-orange fas fa-water"></i> Recorrido por las Ciénegas del Fuerte (duración: 2 hrs).</li>
+                                <li class="mb-2"><i class="text-orange fas fa-dollar-sign"></i> Costo: $200 mxn (por persona).</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul class="texto">
+                                <li class="mb-2"><i class="text-orange fas fa-horse"></i> Cabalgata a la orilla del mar (duración 40 min. Servicio complementario sujeto a disponibilidad).</li>
+                                <li class="mb-2"><i class="text-orange fas fa-dollar-sign"></i> Costo: $350 mxn (por persona).</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-12 text-center">
+                            <a href="https://wa.me/522297806298?text=¡Hola,%20quiero%20reservar%20una%20experiencia!%20Por%20favor" class="btn btn-habitaciones" title="">ME INTERESA</a>
+                        </div>
+                    </div>
                     <ul class="texto">
-                        <li><i class="text-orange fas fa-water"></i> Recorrido por las Ciénegas del Fuerte (duración: 2 hrs).</li>
-                        <li><i class="text-orange fas fa-dollar-sign"></i> Costo: $200 mxn (por persona).</li>
-                        <li><i class="text-orange fas fa-horse"></i> Cabalgata a la orilla del mar (duración 40 min. Servicio complementario sujeto a disponibilidad).</li>
-                        <li><i class="text-orange fas fa-dollar-sign"></i> Costo: $350 mxn (por persona).</li>
-                        <li><i class="text-orange fas fa-spa"></i> Servicios de belleza (masajes y faciales. Se solicitan con dos horas de anticipación. Precio segun tratamiento).</li>
                     </ul>
                 </div>
             </div>
